<resources>
    <string name="app_name">Asteroids</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="mode_menu">Press to start</string>
    <string name="mode_pause">Pause</string>
    <string name="mode_dead">Dead</string>
    <string name="mode_finish">Finish</string>
    <string name="score_text">0</string>
    <string name="score_lives">3</string>
    <string name="menu_start">Start</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_resume">Resume</string>
    <string name="message_stopped">Stopped</string>

    <string name="button_difficulty">Difficulty</string>
    <string name="button_scores">High Scores</string>
    <string name="button_help">Guide</string>
    <string name="score_name">Enter name</string>

    <string name="popup_guide">Use left joystick to point ship, blue button to thrust, red button to fire. Dodge asteroids and shoot them for points!</string>
    <string name="popup_score">Loading scoreboard.</string>
    <string name="diff_easy">Easy</string>
    <string name="diff_med">Medium</string>
    <string name="diff_hard">Hard</string>
    <string name="no_scores">No high scores yet!</string>
</resources>
